todo-web.yaml
apiVersion: v1
kind: Service
metadata:
  name: todoweb
  labels:
    app: todoweb
spec:
  selector:
    app: todoweb
  ports:
    - port: 80
      name: http
  type: NodePort

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todoweb
  labels:
    app: todoweb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todoweb
  template:
    metadata:
      labels:
        app: todoweb
    spec:
      volumes:
        - name: assets
          emptyDir: {}
      containers:
        - name: nginx
          image: gihyodocker/nginx-nuxt:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 80
          volumeMounts:
            - mountPath: /var/www/_nuxt
              name: assets
        
        - name: web
          image: gihyodocker/todoweb:latest
          imagePullPolicy: Always
          lifecycle:
              postStart:
                exec:
                  command:
                    - cp
                    - -R
                    - /todoweb/.nuxt/dist
                    - /
          ports:
            - containerPort: 3000
          volumeMounts:
            - mountPath: /dist
              name: assets
